@@ -422,6 +422,17 @@ name|org
 operator|.
 name|noggit
 operator|.
+name|JSONParser
+operator|.
+name|ParseException
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|noggit
+operator|.
 name|ObjectBuilder
 import|;
 end_import
@@ -759,6 +770,31 @@ argument_list|(
 name|reader
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|ParseException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+literal|"Cannot parse provided JSON: "
+operator|+
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+throw|;
 block|}
 finally|finally
 block|{
