@@ -1029,6 +1029,131 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+DECL|method|testInvalidJsonProducesBadRequestSolrException
+specifier|public
+name|void
+name|testInvalidJsonProducesBadRequestSolrException
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SolrQueryResponse
+name|rsp
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|BufferingRequestProcessor
+name|p
+init|=
+operator|new
+name|BufferingRequestProcessor
+argument_list|(
+literal|null
+argument_list|)
+decl_stmt|;
+name|JsonLoader
+name|loader
+init|=
+operator|new
+name|JsonLoader
+argument_list|()
+decl_stmt|;
+name|String
+name|invalidJsonString
+init|=
+literal|"}{"
+decl_stmt|;
+try|try
+init|(
+name|SolrQueryRequest
+name|req
+init|=
+name|req
+argument_list|()
+init|)
+block|{
+try|try
+block|{
+name|loader
+operator|.
+name|load
+argument_list|(
+name|req
+argument_list|,
+name|rsp
+argument_list|,
+operator|new
+name|ContentStreamBase
+operator|.
+name|StringStream
+argument_list|(
+name|invalidJsonString
+argument_list|)
+argument_list|,
+name|p
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected invalid JSON to produce a SolrException."
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|SolrException
+name|expectedException
+parameter_list|)
+block|{
+name|assertEquals
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+operator|.
+name|code
+argument_list|,
+name|expectedException
+operator|.
+name|code
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|expectedException
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"Cannot parse"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|expectedException
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"JSON"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
 DECL|method|testSimpleFormatInAdd
 specifier|public
 name|void
